--- a/src/app/src/main/res/layout/activity_sign_up.xml
+++ b/src/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/login_string"
+            android:text="@string/signup_string"
             android:textSize="50dp"
             android:textAlignment="center"
             android:layout_margin="30dp"
@@ -32,7 +32,7 @@
         </TextView>
     </LinearLayout>
 
-    //Username
+    //Email
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:id="@+id/editText_email"
+            android:id="@+id/editText_signup_email"
             android:hint="@string/email_hint"
             android:background="@color/grey">
         </EditText>
@@ -78,32 +78,42 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:id="@+id/editText_password"
+            android:id="@+id/editText_signup_password"
             android:inputType="textPassword"
             android:hint="@string/password_hint"
             android:background="@color/grey">
         </EditText>
     </LinearLayout>
 
-    //Forget password
+    //Repass
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="20dp">
+        android:orientation="vertical"
+        android:paddingHorizontal="30dp"
+        android:layout_marginTop="10dp">
 
         <TextView
-            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/forget_pass"
+            android:text="@string/repass"
             android:textSize="20dp"
-            android:textStyle="bold|italic"
-            android:clickable="true"
-            android:contextClickable="true"/>
+            android:textColor="@color/black">
+        </TextView>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:id="@+id/editText_signup_RePassword"
+            android:inputType="textPassword"
+            android:hint="@string/password_hint"
+            android:background="@color/grey">
+        </EditText>
     </LinearLayout>
 
-    //Login button
+
+    //SignUp button
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -112,14 +122,14 @@
         <Button
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:text="@string/login_string"
+            android:text="@string/sign_up"
             android:padding="5dp"
-            android:id="@+id/btn_login">
+            android:id="@+id/btn_sign_up">
 
         </Button>
     </LinearLayout>
 
-    //Sign up
+    //Sign in
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -128,17 +138,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/create_new_account"
+            android:text="@string/sign_in"
             android:textSize="20dp">
         </TextView>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sign_up"
+            android:text="@string/login"
             android:textSize="20dp"
             android:textStyle="italic"
             android:textColor="@color/design_default_color_primary"
-            android:id="@+id/textView_signup"></TextView>
+            android:id="@+id/textView_login"></TextView>
     </LinearLayout>
 
 
