--- a/src/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/src/app/src/main/res/layout/activity_shopping_cart.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical"
     tools:context=".View.ShoppingCartActivity">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar_shopping_cart"/>
+<!--    <include-->
+<!--        android:id="@+id/toolbar"-->
+<!--        layout="@layout/toolbar_shopping_cart"/>-->
 
     <ScrollView
 
@@ -17,6 +17,7 @@
         >
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -36,84 +37,98 @@
                 android:id="@+id/cart_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-            <GridLayout
-                android:layout_margin="20dp"
+            <LinearLayout
+                android:background="@drawable/layout_bg_top_bottom_border"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:rowCount="3"
-                android:columnCount="3"
-                android:background="@drawable/layout_bg_rounded_corner">
-                <TextView
-                    android:layout_width="0dp"
+                android:orientation="vertical">
+                <GridLayout
+                    android:layout_margin="20dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="textEnd"
-                    android:padding="10dp"
-                    android:layout_row="0"
-                    android:textAllCaps="true"
-                    android:layout_column="0"
-                    android:layout_columnSpan="2"
-                    android:text="@string/subtotal_price"
-                    android:layout_columnWeight="2"/>
-                <TextView
-                    android:id="@+id/subtotalPrice"
-                    android:layout_width="0dp"
+                    android:rowCount="3"
+                    android:columnCount="3"
+                    >
+                    <TextView
+                        android:textStyle="bold"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="textEnd"
+                        android:padding="10dp"
+                        android:layout_row="0"
+                        android:textAllCaps="true"
+                        android:layout_column="0"
+                        android:layout_columnSpan="2"
+                        android:text="@string/subtotal_price"
+                        android:layout_columnWeight="2"/>
+                    <TextView
+                        android:id="@+id/subtotalPrice"
+                        android:textStyle="bold"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:textAllCaps="true"
+                        android:text="@string/zero_number"
+                        android:layout_row="0"
+                        android:layout_column="2"
+                        android:layout_columnWeight="1"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:textStyle="bold"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="textEnd"
+                        android:padding="10dp"
+                        android:layout_row="1"
+                        android:layout_column="0"
+                        android:layout_columnSpan="2"
+                        android:textAllCaps="true"
+                        android:text="@string/discount"
+                        android:layout_columnWeight="2"/>
+                    <TextView
+                        android:id="@+id/discount"
+                        android:textStyle="bold"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:textAllCaps="true"
+                        android:text="@string/zero_number"
+                        android:layout_row="1"
+                        android:layout_column="2"
+                        android:layout_columnWeight="1"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:textStyle="bold"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="textEnd"
+                        android:padding="10dp"
+                        android:layout_row="2"
+                        android:layout_column="0"
+                        android:layout_columnSpan="2"
+                        android:text="@string/total_price"
+                        android:layout_columnWeight="2"/>
+                    <TextView
+                        android:id="@+id/totalPrice"
+                        android:textStyle="bold"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:textAllCaps="true"
+                        android:text="@string/zero_number"
+                        android:layout_row="2"
+                        android:layout_column="2"
+                        android:layout_columnWeight="1"/>
+                </GridLayout>
+                <Button
+                    android:id="@+id/check_out_button"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:textAllCaps="true"
-                    android:text="@string/zero_number"
-                    android:layout_row="0"
-                    android:layout_column="2"
-                    android:layout_columnWeight="1"/>
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="textEnd"
-                    android:padding="10dp"
-                    android:layout_row="1"
-                    android:layout_column="0"
-                    android:layout_columnSpan="2"
-                    android:textAllCaps="true"
-                    android:text="@string/discount"
-                    android:layout_columnWeight="2"/>
-                <TextView
-                    android:id="@+id/discount"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:textAllCaps="true"
-                    android:text="@string/zero_number"
-                    android:layout_row="1"
-                    android:layout_column="2"
-                    android:layout_columnWeight="1"/>
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="textEnd"
-                    android:padding="10dp"
-                    android:layout_row="2"
-                    android:layout_column="0"
-                    android:layout_columnSpan="2"
-                    android:text="@string/total_price"
-                    android:layout_columnWeight="2"/>
-                <TextView
-                    android:id="@+id/totalPrice"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:textAllCaps="true"
-                    android:text="@string/zero_number"
-                    android:layout_row="2"
-                    android:layout_column="2"
-                    android:layout_columnWeight="1"/>
-            </GridLayout>
-            <Button
-                android:id="@+id/check_out_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/button_bg"
-                android:text="@string/check_out"
-                android:layout_gravity="end"
-                android:layout_marginEnd="20dp"/>
+                    android:background="@drawable/button_bg"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/check_out"
+                    android:layout_gravity="end"
+                    android:textColor="@color/white"
+                    android:layout_marginEnd="20dp"/>
+            </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
