--- a/src/app/src/main/res/layout/shopping_cart_item.xml
+++ b/src/app/src/main/res/layout/shopping_cart_item.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/layout_bg_rounded_corner"
     android:orientation="vertical"
-    android:layout_marginVertical="10dp">
+    android:layout_margin="10dp">
     <GridLayout
         android:background="@drawable/layout_bg_bottom_border"
         android:layout_width="match_parent"
@@ -14,6 +14,7 @@
         android:layout_row="2">
 
         <LinearLayout
+
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_column="0"
@@ -22,12 +23,15 @@
             android:layout_columnWeight="2"
             android:orientation="horizontal">
             <ImageButton
+                android:layout_gravity="center"
                 android:id="@+id/productImage"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 />
             <LinearLayout
+                android:padding="10dp"
                 android:layout_gravity="bottom"
+                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -84,6 +88,10 @@
                 android:layout_height="wrap_content"
                 android:text="QUANTITY"/>
             <EditText
+                android:textSize="16sp"
+                android:padding="4sp"
+                android:text="1"
+                android:gravity="center"
                 android:id="@+id/productQuantity"
                 android:inputType="number"
                 android:imeOptions="actionDone"
