--- a/src/app/src/main/res/layout/shopping_cart_item.xml
+++ b/src/app/src/main/res/layout/shopping_cart_item.xml
@@ -5,21 +5,18 @@
     android:background="@drawable/layout_bg_rounded_corner"
     android:orientation="vertical"
     android:layout_margin="10dp">
-    <GridLayout
+    <LinearLayout
         android:background="@drawable/layout_bg_bottom_border"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_column="3"
-        android:padding="10dp"
-        android:layout_row="2">
+        android:orientation="horizontal"
+        android:layout_weight="3"
+        android:padding="10dp">
 
         <LinearLayout
-
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:layout_columnSpan="2"
+            android:layout_weight="2"
             android:layout_columnWeight="2"
             android:orientation="horizontal">
             <ImageButton
@@ -30,13 +27,13 @@
                 />
             <LinearLayout
                 android:padding="10dp"
-                android:layout_gravity="bottom"
-                android:gravity="center"
+                android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
                 <HorizontalScrollView
+
                     android:layout_marginBottom="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -46,7 +43,8 @@
                         android:id="@+id/productName"
                         android:layout_width="wrap_content"
                         android:text="@string/lorem"
-                        android:textSize="24sp"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
                         android:layout_height="wrap_content"/>
                 </HorizontalScrollView>
                 <HorizontalScrollView
@@ -60,7 +58,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:text="@string/total_price"
-                            android:textSize="16sp"
+                            android:textSize="14sp"
                             android:layout_height="wrap_content"/>
                         <TextView
                             android:id="@+id/productPrice"
@@ -75,33 +73,42 @@
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
-            android:padding="10dp"
+            android:layout_margin="4dp"
             android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_column="2"
-            android:layout_row="0"
-            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:background="@drawable/edittext_rounded_border"
+            android:orientation="horizontal"
             android:layout_columnWeight="1">
-            <TextView
-                android:layout_gravity="center"
+            <ImageButton
+                android:id="@+id/decreaseProductQuantity"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="QUANTITY"/>
+                android:src="@drawable/arrow_left_icon_black"
+                android:background="@drawable/round_button"
+                android:layout_height="wrap_content"/>
             <EditText
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:padding="4sp"
-                android:text="1"
+                android:background="@android:color/transparent"
+                android:hint="@string/quantity_holder"
                 android:gravity="center"
                 android:id="@+id/productQuantity"
                 android:inputType="number"
                 android:imeOptions="actionDone"
-                android:background="@drawable/layout_bg_rounded_corner"
                 android:layout_gravity="center"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
+            <ImageButton
+                android:id="@+id/increaseProductQuantity"
+                android:layout_width="wrap_content"
+                android:src="@drawable/arrow_right_icon_black"
+                android:background="@drawable/round_button"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
-    </GridLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
