--- a/src/app/src/main/res/drawable/button_focus_rounded_corners.xml
+++ b/src/app/src/main/res/drawable/button_focus_rounded_corners.xml
@@ -1,4 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <stroke android:width="1dp" android:color="#FF404040" />
-    <solid  android:color="@android:color/black"  android:angle="90" />
+    <corners android:radius="6dp" />
+    <solid android:color="@android:color/darker_gray" android:angle="90" />
 </shape>
