--- a/src/app/src/main/res/layout/activity_product_detail.xml
+++ b/src/app/src/main/res/layout/activity_product_detail.xml
@@ -169,6 +169,7 @@
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
         android:transitionName="image"
+        android:src="@drawable/image_holder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
