--- a/src/app/src/main/res/layout/products_row_item.xml
+++ b/src/app/src/main/res/layout/products_row_item.xml
@@ -10,8 +10,8 @@
         android:layout_width="250dp"
         android:layout_height="500dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY"
         android:transitionName="image"
+        android:src="@drawable/image_holder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
