--- a/src/app/src/main/res/layout/activity_product_list.xml
+++ b/src/app/src/main/res/layout/activity_product_list.xml
@@ -7,6 +7,7 @@
     android:layout_gravity="center"
     tools:context=".MainActivity">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="wrap_content"
@@ -138,6 +139,32 @@
         app:layout_constraintStart_toStartOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/cat_recycler"
         tools:listitem="@layout/products_row_item" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="Login"
+        android:textColor="@color/black"
+        android:clickable="true"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toTopOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="164dp"
+        android:text="Sign up"
+        android:textColor="@color/black"
+        android:clickable="true"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
+        app:layout_constraintStart_toEndOf="@+id/search_bar"
+        app:layout_constraintTop_toTopOf="@+id/search_bar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
