--- a/src/app/src/main/res/layout/fragment_user_security.xml
+++ b/src/app/src/main/res/layout/fragment_user_security.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".View.UserPageFragments.UserSecurityFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/change_password"
+            android:layout_width="match_parent"
+            android:textStyle="bold"
+            android:layout_height="48sp"
+            android:paddingHorizontal="10sp"
+            android:background="@drawable/setting_button"
+            android:gravity="center_vertical"
+            android:text="@string/change_password"
+            android:clickable="true"
+            app:drawableEndCompat="@drawable/arrow_right_icon"
+            app:drawableStartCompat="@drawable/key_icon" />
+    </LinearLayout>
+
 
 </FrameLayout>
