--- a/src/app/src/main/res/layout/fragment_user_order_detail.xml
+++ b/src/app/src/main/res/layout/fragment_user_order_detail.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             >
             <ImageButton
-                android:id="@+id/save_button"
+                android:id="@+id/back_button"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_centerInParent="true"
