--- a/src/app/src/main/res/navigation/nav_user_page.xml
+++ b/src/app/src/main/res/navigation/nav_user_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_sample.xml"
     app:startDestination="@id/userPageMainFragment">
 
@@ -11,6 +12,9 @@
         <action
             android:id="@+id/action_userPageMainFragment_to_userOrderDetailFragment"
             app:destination="@id/userOrderDetailFragment" />
+        <action
+            android:id="@+id/action_userPageMainFragment_to_userPageResetPasswordFragment"
+            app:destination="@id/userPageResetPasswordFragment" />
     </fragment>
     <fragment
         android:id="@+id/userOrderDetailFragment"
@@ -20,4 +24,9 @@
             android:name="orderId"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/userPageResetPasswordFragment"
+        android:name="com.example.ecommerceapp.View.UserPageFragments.UserPageResetPasswordFragment"
+        android:label="fragment_user_page_reset_password"
+        tools:layout="@layout/fragment_user_page_reset_password" />
 </navigation>
