--- a/src/app/src/main/res/layout/fragment_user_page_reset_password.xml
+++ b/src/app/src/main/res/layout/fragment_user_page_reset_password.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
 
     tools:context=".View.UserPageFragments.UserPageResetPasswordFragment">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent">
@@ -107,6 +107,6 @@
                     android:src="@drawable/check_icon"/>
             </RelativeLayout>
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
 </FrameLayout>
