Edit login + signup

--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey">	#DCDCDC</color>
     <color name="tabSelectedIconColor">#F5BD02</color>
     <color name="tabUnselectedIconColor">#FFFFFF</color>
+    <color name="red">	#FF0000</color>
 </resources>
