--- a/src/app/src/main/res/layout/activity_forget_pass.xml
+++ b/src/app/src/main/res/layout/activity_forget_pass.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:id="@+id/editText_signup_email"
+            android:id="@+id/editText_forgetPass_email"
             android:hint="@string/email_hint"
             android:background="@color/grey">
         </EditText>
@@ -76,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:id="@+id/editText_signup_password"
+            android:id="@+id/editText_forgetPass_password"
             android:inputType="textPassword"
             android:hint="@string/password_hint"
             android:background="@color/grey">
@@ -103,11 +103,21 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:id="@+id/editText_signup_RePassword"
+            android:id="@+id/editText_forgetPass_RePassword"
             android:inputType="textPassword"
             android:hint="@string/password_hint"
             android:background="@color/grey">
         </EditText>
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/forgetPass_status"
+            android:text="@string/passwordNotMatch"
+            android:textColor="@color/red">
+
+        </TextView>
     </LinearLayout>
 
     <LinearLayout
