--- a/src/app/src/main/res/layout/activity_sign_up.xml
+++ b/src/app/src/main/res/layout/activity_sign_up.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:src="@drawable/logo"
@@ -24,7 +23,7 @@
             android:text="@string/signup_string"
             android:textSize="50dp"
             android:textAlignment="center"
-            android:layout_margin="30dp"
+            android:layout_margin="20dp"
             android:fontFamily="sans-serif"
             android:textColor="@color/cardview_dark_background">
         </TextView>
@@ -36,7 +35,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingHorizontal="30dp"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="20dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -108,6 +107,16 @@
             android:hint="@string/password_hint"
             android:background="@color/grey">
         </EditText>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/red"
+            android:text="Status"
+            android:textSize="20dp"
+            android:id="@+id/textView_signup_status">
+
+        </TextView>
     </LinearLayout>
 
 
@@ -116,7 +125,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="90dp">
+        android:layout_marginTop="50dp">
         <Button
             android:layout_width="100dp"
             android:layout_height="50dp"
