!fix product manager

--- a/src/app/src/main/res/navigation/nav_admin_page.xml
+++ b/src/app/src/main/res/navigation/nav_admin_page.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_adminPageMainFragment_to_adminOrderDetailFragment"
             app:destination="@id/adminOrderDetailFragment" />
+        <action
+            android:id="@+id/action_adminPageMainFragment_to_adminProductDetailFragment"
+            app:destination="@id/adminProductDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/adminAccountDetailFragment"
@@ -33,6 +36,18 @@
         tools:layout="@layout/fragment_admin_order_detail" >
         <argument
             android:name="orderId"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminProductDetailFragment"
+        android:name="com.example.ecommerceapp.View.AdminPageFragments.AdminProductDetailFragment"
+        android:label="fragment_admin_product_detail"
+        tools:layout="@layout/fragment_admin_product_detail" >
+        <argument
+            android:name="productId"
+            app:argType="string" />
+        <argument
+            android:name="intention"
             app:argType="string" />
     </fragment>
 </navigation>
