! fix admin navigation

--- a/src/app/src/main/res/menu/user_toolbar.xml
+++ b/src/app/src/main/res/menu/user_toolbar.xml
@@ -8,4 +8,11 @@
         android:title="Menu1">
 
     </item>
+    <item
+        android:id="@+id/admin_page"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/admin_page_icon"
+        android:title="Menu1">
+
+    </item>
 </menu>
